--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rsmpeg"
-version = "0.15.1+ffmpeg.7.0"
+version = "0.15.1+ffmpeg7.1"
 authors = ["liudingming <liudingming@bytedance.com>"]
 edition = "2021"
 license = "MIT"
@@ -14,7 +14,7 @@ exclude = ["/.github", "/tests", "/utils"]
 rust-version = "1.70.0"
 
 [dependencies]
-rusty_ffmpeg = "0.16.1"
+rusty_ffmpeg = { git = "https://github.com/nanit/ai-rusty_ffmpeg.git", tag = "v0.16.1+ffmpeg7.1" }
 paste = "1.0"
 thiserror = "1.0"
 
@@ -38,3 +38,6 @@ ffmpeg7 = ["ffmpeg6", "rusty_ffmpeg/ffmpeg7"]
 link_system_ffmpeg = ["rusty_ffmpeg/link_system_ffmpeg"]
 # Try linking ffmpeg with vcpkg.
 link_vcpkg_ffmpeg = ["rusty_ffmpeg/link_vcpkg_ffmpeg"]
+
+[workspace.metadata.release]
+tag-name = "v{{version}}+{{metadata}}"
